<resources>
    <string name="app_name">UnityBound</string>
    <string name="str_don_t_have_an_account_please_register">Don\'t have an account? Please <b>Register</b></string>
    <string name="str_already_account_login">Already have an account ? Please <b>Login</b></string>
    <string name="str_privacy_policy">By Clicking Create Account,you agree to our <u>Terms</u> \n
        and confirm that you have read our <u>Privacy Policy</u></string>
    <string name="str_create_new_account">Create an new account, It\'s free</string>

    <string name="str_home">Home</string>
    <string name="str_church">Churches</string>
    <string name="str_event">Events</string>
    <string name="str_grp">Groups</string>
    <string name="str_obituaries">Obituaries</string>
    <string name="str_wedd">Weddings</string>
    <string name="str_acc">My Account</string>
    <string name="str_notify">Notifications</string>
    <string name="str_pref">Prefrences</string>
    <string name="str_settings">Settings</string>
    <string name="str_logout">Logout</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="str_reset_your_password">Reset your Password</string>
    <string name="str_send_link_text">We will send a link to your email to \n
        reset your password</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_submit">Submit</string>
    <string name="str_accept">Accept</string>
    <string name="str_decline">Decline</string>
    <string name="str_see_all_events"><U>See All Events</U></string>
    <string name="str_church_members"><U>Church Members</U></string>
    <string name="map_debug_key">AIzaSyCJZKhqJ4_DPIgNXtqRLiNr2gn6IyCy9Qw</string>

    <!--My Account About screen-->
    <string name="str_phone_number">Phone</string>
    <string name="str_about">About</string>
    <string name="str_address">Address</string>
    <string name="str_email">Email</string>
    <string name="str_my_friends">My Friends</string>
    <!--My Friends screen-->
    <string name="str_friend">Friend</string>
    <!--My Photos screen-->
    <string name="str_photos">My Photos</string>
    <string name="str_edit">Edit</string>
    <string name="str_unblock">Unblock</string>
    <string name="str_for_membership_request">for Membership Request</string>
    <string name="str_click_here">Click Here</string>
    <string name="str_join">Join</string>
    <string name="str_enter_access_code">Please enter access code</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_church_phone_number">Church Phone Number</string>
    <string name="str_country">Country</string>
    <string name="str_zip">Zip</string>
    <string name="str_address_2">Address 2</string>
    <string name="str_mailing_address">Mailing Address</string>
    <string name="str_city">City</string>
    <string name="str_pastor_s_name">Pastor\'s Name</string>
    <string name="str_name_your_church">Name Your Church</string>
    <string name="str_upload_photo">Upload Photo</string>
    <string name="str_church_s_denomination">Church\'s Denomination</string>
    <string name="str_close">Close</string>
    <string name="str_name_event">Name your Event</string>
    <string name="str_public_event">Public Event</string>
    <string name="str_private_event">Private Event</string>
    <string name="str_event_venue">Event Venue</string>
    <string name="str_start_date">Start Date</string>
    <string name="str_start_time">Start Time</string>
    <string name="str_invite_friends">Invite Friends</string>
    <string name="str_create">Create</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Churches</item>
        <item>Events</item>
        <item>Groups</item>
        <item>Obituaries</item>
        <item>Weddings</item>
        <item>My Account</item>
        <item>Notifications</item>
        <item>Prefrences</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <string-array name="spinner_titles">
        <item>All Types</item>
        <item>Devotionals</item>
        <item>Praise</item>
        <item>Prayers</item>
        <item>Testimonials</item>
    </string-array>

    <string-array name="pinner_imgs">
        <item>@drawable/ic_all_types</item>
        <item>@drawable/ic_devotional</item>
        <item>@drawable/ic_praise</item>
        <item>@drawable/ic_prayer</item>
        <item>@drawable/ic_testimonial</item>
    </string-array>

</resources>
