<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/iv_login_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_above="@+id/ll_bottomlayout"
        android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="match_parent"
          style="@style/margin"
          android:padding="4dp"
          android:gravity="center"
          android:orientation="vertical"
          android:background="@color/color_white"
          android:layout_height="wrap_content">

          <TextView
              android:layout_width="wrap_content"
              android:textSize="16sp"
              android:visibility="invisible"
              android:layout_marginTop="5dp"
              android:gravity="center"
              android:textColor="@android:color/black"
              android:text="@string/str_send_link_text"
              android:layout_height="wrap_content" />

          <TextView
              android:layout_width="wrap_content"
              android:textSize="22sp"
              android:textColor="@android:color/black"
              android:text="@string/str_reset_your_password"
              android:layout_height="wrap_content" />

          <TextView
              android:id="@+id/tv_sendlink"
              android:layout_width="wrap_content"
              android:textSize="16sp"
              android:layout_marginTop="5dp"
              android:gravity="center"
              android:textColor="@android:color/black"
              android:text="@string/str_send_link_text"
              android:layout_height="wrap_content" />

          <android.support.v7.widget.AppCompatEditText
              android:id="@+id/edt_email"
              android:hint="Enter a valid Email id"
              android:singleLine="true"
              android:maxLines="1"
              style="@style/edit_text_height"
              android:gravity="center"
              android:background="@drawable/edit_text_black_border"
              android:textColorHint="@android:color/darker_gray"
              android:textColor="@android:color/darker_gray"
              android:inputType="textEmailAddress"
              android:imeOptions="actionDone"
              android:layout_centerInParent="true"
              android:layout_width="match_parent"
              android:layout_height="match_parent" />


          <LinearLayout
              android:layout_width="match_parent"
              android:orientation="horizontal"
              android:gravity="center"
              android:layout_marginTop="20dp"
              android:weightSum="1"
              android:layout_height="wrap_content">

              <Button
                  android:id="@+id/btn_submit"
                  android:layout_width="0dp"
                  android:layout_weight="0.50"
                  android:text="@string/str_submit"
                  android:textColor="@color/color_white"
                  android:layout_marginRight="2dp"
                  android:background="@color/color_forgot_pwd_submit"
                  android:layout_height="wrap_content" />

              <Button
                  android:id="@+id/btn_cancel"
                  android:layout_width="0dp"
                  android:layout_weight="0.50"
                  android:layout_marginLeft="2dp"
                  android:background="@drawable/edit_text_black_border"
                  android:text="@string/str_cancel"
                  android:layout_height="wrap_content" />
          </LinearLayout>

          <TextView
              android:visibility="invisible"
              android:layout_width="wrap_content"
              android:textSize="16sp"
              android:layout_marginTop="5dp"
              android:gravity="center"
              android:textColor="@android:color/black"
              android:text="@string/str_send_link_text"
              android:layout_height="wrap_content" />


      </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottomlayout"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_dontaccount"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@color/color_dont_account_bg"
            android:textColor="@color/color_dont_account"
            android:text="@string/str_don_t_have_an_account_please_register"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>
