<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:weightSum="2">

        <ImageView
            android:id="@+id/iv_cross"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/dimen_five"
            android:gravity="center"
            android:src="@drawable/ic_cross_icon_grey"
            android:textAllCaps="true"
            android:textColor="@color/color_white" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ok"
            android:layout_alignStart="@+id/ok"
            android:layout_below="@+id/iv_cross"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/iv_cross"
            android:layout_toStartOf="@+id/iv_cross"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="Access Code"
                android:textColor="@color/text_color_secondary"
                android:textSize="16sp"
                android:visibility="visible"
                android:weightSum="1" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_access_code"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginRight="@dimen/dimen_ten"
                    android:layout_toLeftOf="@+id/btn_join"
                    android:layout_toStartOf="@+id/btn_join"
                    android:background="@drawable/edit_text_black_border" />

                <Button
                    android:id="@+id/btn_join"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:background="@color/color_orange"
                    android:text="@string/str_join"
                    android:textColor="@color/color_white" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_ten"
                android:gravity="center_horizontal"
                android:text="OR" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_twenty"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_click_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_click_here"
                    android:textColor="@color/color_orange" />

                <TextView
                    android:id="@+id/tv_click_here2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_five"
                    android:layout_toRightOf="@+id/tv_click_here"
                    android:text="@string/str_for_membership_request"
                    android:textColor="@color/text_color_secondary" />
            </RelativeLayout>
        </LinearLayout>




    </RelativeLayout>


</RelativeLayout>