<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_emergency"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_layout" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/toolbar_layout"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider1"
        android:layout_marginBottom="@dimen/dimen_ten"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/ic_user_orange"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/dimen_ten"
        android:layout_marginTop="@dimen/dimen_ten"
        android:text="@string/str_about"
        android:textColor="@color/text_color_primary"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_about"
        android:background="@color/divider_color" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider2"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/tv_event_decription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_ten"
            android:maxLines="6"
            android:text="Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum "
            android:textColor="@color/text_color_secondary"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_event_decription"
            android:layout_marginTop="@dimen/dimen_ten"
            android:paddingLeft="@dimen/dimen_ten"
            android:paddingRight="@dimen/dimen_ten"
            android:background="@color/bg_layout">

            <TextView
                android:id="@+id/tv_label1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_ten"
                android:gravity="left"
                android:padding="@dimen/dimen_five"
                android:text="@string/str_phone_number"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tv_label1"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/tv_phone1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider4"
                android:layout_marginTop="@dimen/dimen_five"
                android:gravity="left"
                android:padding="@dimen/dimen_five"
                android:text="0123456789 (Home)"
                android:textColor="@color/text_color_secondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_phone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_phone1"
                android:layout_marginTop="@dimen/dimen_five"
                android:gravity="left"
                android:padding="@dimen/dimen_five"
                android:text="0123456789 (Mobile)"
                android:textColor="@color/text_color_secondary"
                android:textSize="12sp" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tv_phone2"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/tv_label2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider5"
                android:layout_marginTop="@dimen/dimen_ten"
                android:gravity="left"
                android:padding="@dimen/dimen_five"
                android:text="@string/str_address"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tv_label2"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/tv_address_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider6"
                android:layout_marginTop="@dimen/dimen_five"
                android:gravity="left"
                android:padding="@dimen/dimen_five"
                android:text="819 Black Street \npasadena,CA 91106"
                android:textColor="@color/text_color_secondary"
                android:textSize="12sp" />


            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tv_address_1"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/tv_label3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider7"
                android:layout_marginTop="@dimen/dimen_ten"
                android:gravity="left"
                android:padding="@dimen/dimen_five"
                android:text="@string/str_email"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tv_label3"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider8"
                android:layout_marginTop="@dimen/dimen_five"
                android:gravity="left"
                android:padding="@dimen/dimen_five"
                android:text="ABSC@gmail.com"
                android:textColor="@color/text_color_secondary"
                android:textSize="12sp" />


            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tv_email"
                android:background="@color/divider_color" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
